# oatpp-tests

1.simple-project/: CMakeLists.txt  cmake.sh
1.simple-project/src/: main.cpp
2.well-structured-project/src/controller/: HelloController.hpp
2.well-structured-project/src/dto/: Message.hpp
2.well-structured-project/test/: HelloControllerTest.cpp
2.well-structured-project/test/app/: ApiTestClient.hpp
